lox-tests/tests/super/no_superclass_bind.stderr
ERROR: Cannot use `super` in a class with no superclass
 --> 3:5
  |
3 |     super.doesNotExist; // Error at 'super': Can't use 'super' in a class with no superclass.
  |     ^----------------^
